# Python-use-case

./: .flake8  .gitignore  README.md  main.py  pending.txt  pyproject.toml  requirements.txt
.github/: BRANCH_PROTECTION.md  pull_request_template.md
.github/workflows/: README.md  ci.yml
config/: config.yaml
docs/: INSTALL_POETRY.md
notebooks/: analysis.ipynb
scripts/: check_code.ps1  check_code.sh
src/: pipeline.py  utils.py
src/layers/: bronze_processing.py  gold_processing.py  silver_processing.py
tests/integration/: test_pipeline_integration.py
tests/unit/: test_bronze_processing.py  test_utils.py
