[tool.poetry]
name = "nyc-collision-etl"
version = "0.1.0"
description = "ETL pipeline for analyzing NYC traffic collision data using Polars and DuckDB."
authors = ["Tu Nombre <tu.email@ejemplo.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11" # Asegúrate de que esta versión sea compatible con tu entorno
# --- LIBRERÍAS CORE ETL & DATA PROCESSING ---
polars = "1.35.2"
duckdb = "1.4.3"
pyarrow = "22.0.0" # PyArrow es necesario para la compatibilidad con Parquet en Polars/DuckDB
pandas = "2.3.3" # Requerido por Seaborn/Matplotlib
numpy = "2.3.5"
python-dotenv = "1.2.1"
PyYAML = "6.0.3"

# --- WEB/REQUESTS ---
requests = "2.32.5"
certifi = "2025.11.12"
charset-normalizer = "3.4.4"
idna = "3.11"
urllib3 = "2.6.0"

# --- VISUALIZACIÓN/NOTEBOOK ---
seaborn = "0.13.2"
matplotlib = "3.10.8"
jupyter-core = "5.9.1"
ipykernel = "7.1.0"
ipython = "9.8.0"
comm = "0.2.3"
decorator = "5.2.1"
matplotlib-inline = "0.2.1"
nest-asyncio = "1.6.0"
psutil = "7.1.3"
tornado = "6.5.2"
traitlets = "5.14.3"
pyzmq = "27.1.0"
# (El resto de las dependencias de bajo nivel de Matplotlib y IPython se manejan automáticamente)

# --- TIPADO & UTILIDADES ---
typing-extensions = "4.15.0"
python-dateutil = "2.9.0.post0"
pytz = "2025.2"
tzdata = "2025.2"
six = "1.17.0"


[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

# Linting & Formatting
black = "^24.0.0"
flake8 = "^7.0.0"
isort = "^5.13.0"
mypy = "^1.8.0"

# Security
bandit = "^1.7.5"
safety = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black configuration
[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/__pycache__/*"]

# Flake8 configuration (via setup.cfg or .flake8)
# Note: flake8 doesn't read pyproject.toml, but we document it here
# Create .flake8 file for flake8 configuration

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "polars.*",
    "duckdb.*",
    "pyarrow.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]